[project]
name = "multi-agent-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.4",
    "duckduckgo-search>=8.0.4",
    "fastapi[standard]>=0.115.13",
    "fastmcp>=2.9.2",
    "google-genai>=1.22.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.63",
]
